tests/fails/f5.t
terra foo(a : int, a : int)

end
foo(2,4)
